--- a/src/login1.html
+++ b/src/login1.html
@@ -40,6 +40,31 @@
     <!-- 内容 -->
     <div class="login1Content">
         <!-- button -->
+        <div class="complete">
+            <div class="complete-container">
+                <div class="complete-wizard">
+                    <div>
+                        <div>1</div>
+                        <div>
+                            <p>會員資料</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>2</div>
+                        <div>
+                            <p>寶寶資料</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div>3</div>
+                        <div>
+                            <p>完成註冊</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="loginFont">
             <p class="loginFontContent">誠摯歡迎您加入亞培會員！</p>
             <p class="loginFontContent">加入亞培會員即可免費使用亞培公司所提供的相關線上服務，包括:保健資料索取，營養品試用，簡易健康檢測，產品訂購..等服務。您只要填寫完整的會員資料即可加入，我們會以您方便的聯絡時間與您聯系</p>
@@ -59,24 +84,24 @@
 
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                        </div>
-                        <div class="modal-body">
-                            mac os安装好了很久了，不过没怎么用，昨天想要体验一下大神们推荐的黑苹果系统用起来怎么样（关于安装黑苹果的可以到我的简书去看相关文章），于是乎，打开久违的vmware，看着咬一口的苹果进度图，心中其实是有一些小激动的。 　　进入系统后，先是找终端找不到，在win下用惯了cmd，到这完全找不到北在哪。
-                            　　经过阿杜告诉我的，先进入Finder，然后左侧找到“应用程序”，选择实用工具，再找到“终端”，这就是我们中win下的cmd了。或者就是这左上角点放大镜，输入ter回车第一个就是。
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn-purpel">赞同</button>
-                        </div>
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                    </div>
+                    <div class="modal-body">
+                        mac os安装好了很久了，不过没怎么用，昨天想要体验一下大神们推荐的黑苹果系统用起来怎么样（关于安装黑苹果的可以到我的简书去看相关文章），于是乎，打开久违的vmware，看着咬一口的苹果进度图，心中其实是有一些小激动的。 　　进入系统后，先是找终端找不到，在win下用惯了cmd，到这完全找不到北在哪。
+                        　　经过阿杜告诉我的，先进入Finder，然后左侧找到“应用程序”，选择实用工具，再找到“终端”，这就是我们中win下的cmd了。或者就是这左上角点放大镜，输入ter回车第一个就是。
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn-purpel">赞同</button>
                     </div>
                 </div>
             </div>
+        </div>
 
         <!-- details -->
         <div class="loginInformation">
@@ -92,7 +117,7 @@
                     <span>姓名</span>
                     <span>*</span>
                 </span>
-                <div >
+                <div>
                     <input type="text" placeholder="yyyy-mm-dd">
                     <button type="button" class="addOn"></button>
                 </div>
@@ -112,7 +137,7 @@
                     <span>密碼</span>
                     <span>*</span>
                 </span>
-                <div >
+                <div>
                     <input type="text" placeholder="XXXX">
                     <button type="button" class="addOn"></button>
                 </div>
@@ -122,7 +147,7 @@
                     <span>確認密碼</span>
                     <span>*</span>
                 </span>
-                <div >
+                <div>
                     <input type="text" placeholder="XXX">
                     <button type="button" class="addOn"></button>
                 </div>
@@ -218,7 +243,7 @@
                 </span>
                 <input type="text" name="lname" placeholder="請輸入電子信箱" />
             </div>
-          
+
             <div class="detialConditionDataInput ">
                 <span>
                     <span>方便聯絡時間</span>
@@ -228,12 +253,12 @@
                     <input type="text" name="lname" placeholder="二聯式" />
                     <span class="glyphicon glyphicon-chevron-down"></span>
                 </div>
-            </div>    
+            </div>
         </div>
         <div class="sign-in-container-p1">
-                <button class="btn-lg-purpel" data-toggle="modal" data-target="#mobile_Modal02">下一步
-                </button>
-       </div>
+            <button class="btn-lg-purpel" data-toggle="modal" data-target="#mobile_Modal02">下一步
+            </button>
+        </div>
     </div>
     <img class="buttom-img" src="images/m_footer_bg.png" alt="" />
     <div class="copyright">
