--- a/src/login2.html
+++ b/src/login2.html
@@ -42,6 +42,30 @@
     <!-- 内容 -->
     <div class="login1Content">
         <!-- button -->
+        <div class="complete">
+                <div class="complete-container">
+                    <div class="complete-wizard">
+                        <div>
+                            <div>1</div>
+                            <div>
+                                <p>會員資料</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>2</div>
+                            <div>
+                                <p>寶寶資料</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>3</div>
+                            <div>
+                                <p>完成註冊</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         <!-- details -->
         <div class="loginInformation">
