--- a/src/details.html
+++ b/src/details.html
@@ -205,32 +205,50 @@
             </div>
 
             <div class="detialConditionDataInput">
-                <span>
-                    <span>胎次</span>
-                    <span>*</span>
+                <span class="colorFont">
+                    <span>
+                        <span>胎次</span>
+                        <span class="color">*</span>
+                    </span>
                 </span>
+
                 <div id="trigger1" class="select">
 
                 </div>
             </div>
 
             <div class="detialConditionDataInputHP">
-                <span>
-                    <span>生產醫院</span>
-                    <span>*</span>
+                <span class="colorFont">
+                    <span>
+                        <span>生產醫院</span>
+                        <span class="color">*</span>
+                    </span>
                 </span>
                 <span>
-                    <div>
-                        <input type="text" name="lname" placeholder="請輸入生產醫院" />
+                    <div id="trigger2" class="select">
+
+                    </div>
+                    <div id="trigger3" class="select">
+
                     </div>
                 </span>
             </div>
-            <div class="detialConditionDataInputHP">
+            <div class="detialConditionDataInput">
                 <span>
-                    <span>居住地址</span>
-                    <span>&nbsp</span>
+                    <span></span>
+                    <span></span>
                 </span>
+                <input type="text" name="lname" placeholder="請輸入詳細地址" />
+            </div>
 
+
+            <div class="detialConditionDataInputHP">
+                <span class="colorFont">
+                    <span>
+                        <span>居住地址</span>
+                        <span class="color">&nbsp;</span>
+                    </span>
+                </span>
                 <span>
                     <div id="trigger2" class="select">
 
