--- a/src/information.html
+++ b/src/information.html
@@ -115,10 +115,13 @@
             </div>
         </div>
         <div class="detialConditionDataInputHP">
-            <span>
-                <span>生產醫院</span>
-                <span>*</span>
+            <span class="colorFont">
+                <span>
+                    <span>生產醫院</span>
+                    <span class="color">*</span>
+                </span>
             </span>
+
             <span>
                 <div id="trigger2" class="select">
 
@@ -152,10 +155,13 @@
             <input type="text" name="lname" placeholder="09323232" />
         </div>
         <div class="detialConditionDataInputHP">
-            <span>
-                <span>送貨地址</span>
-                <span>*</span>
+            <span class="colorFont">
+                <span>
+                    <span>送貨地址</span>
+                    <span class="color">*</span>
+                </span>
             </span>
+
             <span>
                 <div id="trigger2" class="select">
 
@@ -214,17 +220,20 @@
                 <span>收款方式</span>
                 <span>*</span>
             </span>
+
             <div>
                 <input type="radio" name="lname" /> 貨到付款</div>
         </div>
         <div class="detialConditionDataInput ">
-            <span>
-                <span>發票類型</span>
-                <span>&nbsp;</span>
+            <span class="colorFont">
+                <span>
+                    <span>發票類型</span>
+                    <span class="color">*</span>
+                </span>
             </span>
-            <div class="informationInput">
-                <input type="text" name="lname" placeholder="二聯式" />
-                <span class="glyphicon glyphicon-chevron-down"></span>
+
+            <div class="informationInput select" id="trigger4">
+
             </div>
 
         </div>
