--- a/src/login2.html
+++ b/src/login2.html
@@ -254,7 +254,7 @@
                         </div>
                     </div>
                     <div class="detialConditionDataInputHP">
-                        <span >
+                        <span>
                             <span>驗證碼</span>
                             <span>&nbsp</span>
                         </span>
@@ -287,6 +287,7 @@
                     <script src="./js/bootstrap.min.js"></script>
                     <script type="text/javascript" src="./js/moment.js"></script>
                     <script type="text/javascript" src="./js/bootstrap-datetimepicker.js"></script>
+                    <script type="text/javascript" src="./js/mobileSelect.min.js"></script>
                     <script src="./js/index.js"></script>
 
 </body>
