--- a/src/login1.html
+++ b/src/login1.html
@@ -276,6 +276,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/moment.js"></script>
     <script type="text/javascript" src="./js/bootstrap-datetimepicker.js"></script>
+    <script type="text/javascript" src="./js/mobileSelect.min.js"></script>
     <script src="./js/index.js"></script>
 
 </body>
