--- a/src/information.html
+++ b/src/information.html
@@ -8,11 +8,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    
+    <link href="./css/mobileSelect.css" rel="stylesheet" type="text/css" />
     <link href="./css/bootstrap-datetimepicker.css" rel="stylesheet" type="text/css" />
     <link href="./css/details.css" rel="stylesheet" type="text/css" />
-    <link href="./css/mobileSelect.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="./css/mobileSelect.css" rel="stylesheet" type="text/css" /> -->
 
     <link href="./css/information.css" rel="stylesheet" type="text/css" />
+    <link href="./css/datetimeandselect.css" rel="stylesheet" type="text/css" />
 
     <!--[if lt IE 9]>
     <script src="./js/html5shiv.min.js"></script>
@@ -109,7 +112,7 @@
                 <span>預產期</span>
                 <span>*</span>
             </span>
-            <div class="iDate date">
+            <div class="iDate date m_datetime">
                 <input type="text" placeholder="yyyy-mm-dd">
                 <button type="button" class="addOn"></button>
             </div>
