--- a/src/details.html
+++ b/src/details.html
@@ -13,6 +13,7 @@
 
     <link href="./css/index.css" rel="stylesheet" type="text/css" />
     <link href="./css/details.css" rel="stylesheet" type="text/css" />
+    <link href="./css/datetimeandselect.css" rel="stylesheet" type="text/css" />
 
     <!--[if lt IE 9]>
     <script src="./js/html5shiv.min.js"></script>
