update all date&select

--- a/src/information.html
+++ b/src/information.html
@@ -112,7 +112,7 @@
                 <span>預產期</span>
                 <span>*</span>
             </span>
-            <div class="iDate date m_datetime">
+            <div class="iDate date">
                 <input type="text" placeholder="yyyy-mm-dd">
                 <button type="button" class="addOn"></button>
             </div>
