--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link href="./css/bootstrap-datetimepicker.css" rel="stylesheet" type="text/css" />
 
   <link href="./css/index.css" rel="stylesheet" type="text/css" />
+  <link href="./css/datetimeandselect.css" rel="stylesheet" type="text/css" />
   <!--[if lt IE 9]>
     <script src="./js/html5shiv.min.js"></script>
     <script src="./js/respond.min.js"></script>
@@ -127,12 +128,12 @@
       <div class="className">
         <span>搜索課程 : </span>
         <div class="classInput">
-              <div class="iDate date">
+              <div class="iDate date m_datetime">
                    <input type="text"  placeholder="yyyy-mm-dd" >
                    <button type="button" class="addOn"></button>
               </div>
           &nbsp;至&nbsp;
-          <div class="iDate date">
+          <div class="iDate date m_datetime">
               <input type="text"  placeholder="yyyy-mm-dd" >
               <button type="button" class="addOn"></button>
          </div>
