--- a/src/login2.html
+++ b/src/login2.html
@@ -15,6 +15,7 @@
     <link href="./css/information.css" rel="stylesheet" type="text/css" />
     <link href="./css/login1.css" rel="stylesheet" type="text/css" />
     <link href="./css/login2.css" rel="stylesheet" type="text/css" />
+    <link href="./css/datetimeandselect.css" rel="stylesheet" type="text/css" />
 
 
     <!--[if lt IE 9]>
